// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`When invoked a Dashboard component Should render Stats component 1`] = `
<RNCSafeAreaView>
  <Text
    style={
      Object {
        "fontSize": 26,
        "marginTop": -25,
        "paddingLeft": 20,
      }
    }
  >
    Match Details
  </Text>
  <View
    style={
      Object {
        "backgroundColor": "#E5E5E5",
        "borderRadius": 10,
        "margin": 15,
        "marginBottom": 5,
        "padding": 10,
      }
    }
  >
    <View
      style={
        Object {
          "borderBottomColor": "#7A7A7A",
          "borderBottomWidth": 1,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingVertical": 8,
        }
      }
    >
      <Text>
        Anna
      </Text>
      <Text
        style={
          Object {
            "fontSize": 20,
            "letterSpacing": 20,
          }
        }
      >
        2
        3
        4
      </Text>
    </View>
    <View
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingVertical": 8,
        }
      }
    >
      <Text>
        Anna
      </Text>
      <Text
        style={
          Object {
            "fontSize": 20,
            "letterSpacing": 20,
          }
        }
      >
        2
        3
        4
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "borderBottomColor": "#C4C4C4",
        "borderBottomWidth": 1,
        "flexDirection": "row",
        "fontSize": 24,
        "justifyContent": "space-between",
        "marginBottom": 5,
        "marginHorizontal": 10,
        "marginTop": 10,
      }
    }
  >
    <Text
      style={
        Object {
          "borderBottomColor": "#C4C4C4",
          "borderBottomWidth": 1,
          "flexDirection": "row",
          "fontSize": 24,
          "justifyContent": "space-between",
          "marginBottom": 5,
          "marginHorizontal": 10,
          "marginTop": 10,
        }
      }
    >
      Anna
    </Text>
    <Text
      style={
        Object {
          "borderBottomColor": "#C4C4C4",
          "borderBottomWidth": 1,
          "flexDirection": "row",
          "fontSize": 24,
          "justifyContent": "space-between",
          "marginBottom": 5,
          "marginHorizontal": 10,
          "marginTop": 10,
        }
      }
    >
      Anna
    </Text>
  </View>
  <View
    style={
      Object {
        "marginVertical": 10,
      }
    }
  >
    <View
      style={
        Object {
          "alignSelf": "center",
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginBottom": 10,
          "width": "90%",
        }
      }
    >
      <Text>
        4
      </Text>
      <Text
        style={
          Object {
            "fontSize": 18,
          }
        }
      >
        Aces
      </Text>
      <Text>
        4
      </Text>
    </View>
    <View
      style={
        Object {
          "alignSelf": "center",
          "backgroundColor": "#E5E5E5",
          "borderRadius": 5,
          "display": "flex",
          "flexDirection": "row",
          "height": 14,
          "width": "90%",
        }
      }
    >
      <View
        style={
          Object {
            "width": "50%",
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "alignSelf": "flex-end",
                "backgroundColor": "#F5BF00",
                "borderBottomLeftRadius": 5,
                "borderRightColor": "#000",
                "borderRightWidth": 1,
                "borderTopLeftRadius": 5,
                "height": 14,
                "paddingHorizontal": 20,
                "width": "50%",
              },
              Object {
                "width": "50%",
              },
            ]
          }
        />
      </View>
      <View
        style={
          Object {
            "width": "50%",
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "alignSelf": "flex-start",
                "backgroundColor": "#F7A65B",
                "borderBottomRightRadius": 5,
                "borderLeftColor": "#000",
                "borderLeftWidth": 1,
                "borderTopRightRadius": 5,
                "height": 14,
                "paddingHorizontal": 20,
                "width": "50%",
              },
              Object {
                "width": "50%",
              },
            ]
          }
        />
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "marginVertical": 10,
      }
    }
  >
    <View
      style={
        Object {
          "alignSelf": "center",
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginBottom": 10,
          "width": "90%",
        }
      }
    >
      <Text>
        8
      </Text>
      <Text
        style={
          Object {
            "fontSize": 18,
          }
        }
      >
        Double Faults
      </Text>
      <Text>
        8
      </Text>
    </View>
    <View
      style={
        Object {
          "alignSelf": "center",
          "backgroundColor": "#E5E5E5",
          "borderRadius": 5,
          "display": "flex",
          "flexDirection": "row",
          "height": 14,
          "width": "90%",
        }
      }
    >
      <View
        style={
          Object {
            "width": "50%",
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "alignSelf": "flex-end",
                "backgroundColor": "#F5BF00",
                "borderBottomLeftRadius": 5,
                "borderRightColor": "#000",
                "borderRightWidth": 1,
                "borderTopLeftRadius": 5,
                "height": 14,
                "paddingHorizontal": 20,
                "width": "50%",
              },
              Object {
                "width": "50%",
              },
            ]
          }
        />
      </View>
      <View
        style={
          Object {
            "width": "50%",
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "alignSelf": "flex-start",
                "backgroundColor": "#F7A65B",
                "borderBottomRightRadius": 5,
                "borderLeftColor": "#000",
                "borderLeftWidth": 1,
                "borderTopRightRadius": 5,
                "height": 14,
                "paddingHorizontal": 20,
                "width": "50%",
              },
              Object {
                "width": "50%",
              },
            ]
          }
        />
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "marginVertical": 10,
      }
    }
  >
    <View
      style={
        Object {
          "alignSelf": "center",
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginBottom": 10,
          "width": "90%",
        }
      }
    >
      <Text>
        4
      </Text>
      <Text
        style={
          Object {
            "fontSize": 18,
          }
        }
      >
        Forced Errors
      </Text>
      <Text>
        5
      </Text>
    </View>
    <View
      style={
        Object {
          "alignSelf": "center",
          "backgroundColor": "#E5E5E5",
          "borderRadius": 5,
          "display": "flex",
          "flexDirection": "row",
          "height": 14,
          "width": "90%",
        }
      }
    >
      <View
        style={
          Object {
            "width": "50%",
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "alignSelf": "flex-end",
                "backgroundColor": "#F5BF00",
                "borderBottomLeftRadius": 5,
                "borderRightColor": "#000",
                "borderRightWidth": 1,
                "borderTopLeftRadius": 5,
                "height": 14,
                "paddingHorizontal": 20,
                "width": "50%",
              },
              Object {
                "width": "44%",
              },
            ]
          }
        />
      </View>
      <View
        style={
          Object {
            "width": "50%",
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "alignSelf": "flex-start",
                "backgroundColor": "#F7A65B",
                "borderBottomRightRadius": 5,
                "borderLeftColor": "#000",
                "borderLeftWidth": 1,
                "borderTopRightRadius": 5,
                "height": 14,
                "paddingHorizontal": 20,
                "width": "50%",
              },
              Object {
                "width": "56%",
              },
            ]
          }
        />
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "marginVertical": 10,
      }
    }
  >
    <View
      style={
        Object {
          "alignSelf": "center",
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginBottom": 10,
          "width": "90%",
        }
      }
    >
      <Text>
        5
      </Text>
      <Text
        style={
          Object {
            "fontSize": 18,
          }
        }
      >
        Unforced Errors
      </Text>
      <Text>
        5
      </Text>
    </View>
    <View
      style={
        Object {
          "alignSelf": "center",
          "backgroundColor": "#E5E5E5",
          "borderRadius": 5,
          "display": "flex",
          "flexDirection": "row",
          "height": 14,
          "width": "90%",
        }
      }
    >
      <View
        style={
          Object {
            "width": "50%",
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "alignSelf": "flex-end",
                "backgroundColor": "#F5BF00",
                "borderBottomLeftRadius": 5,
                "borderRightColor": "#000",
                "borderRightWidth": 1,
                "borderTopLeftRadius": 5,
                "height": 14,
                "paddingHorizontal": 20,
                "width": "50%",
              },
              Object {
                "width": "50%",
              },
            ]
          }
        />
      </View>
      <View
        style={
          Object {
            "width": "50%",
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "alignSelf": "flex-start",
                "backgroundColor": "#F7A65B",
                "borderBottomRightRadius": 5,
                "borderLeftColor": "#000",
                "borderLeftWidth": 1,
                "borderTopRightRadius": 5,
                "height": 14,
                "paddingHorizontal": 20,
                "width": "50%",
              },
              Object {
                "width": "50%",
              },
            ]
          }
        />
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "marginVertical": 10,
      }
    }
  >
    <View
      style={
        Object {
          "alignSelf": "center",
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginBottom": 10,
          "width": "90%",
        }
      }
    >
      <Text>
        2
      </Text>
      <Text
        style={
          Object {
            "fontSize": 18,
          }
        }
      >
        Winners
      </Text>
      <Text>
        2
      </Text>
    </View>
    <View
      style={
        Object {
          "alignSelf": "center",
          "backgroundColor": "#E5E5E5",
          "borderRadius": 5,
          "display": "flex",
          "flexDirection": "row",
          "height": 14,
          "width": "90%",
        }
      }
    >
      <View
        style={
          Object {
            "width": "50%",
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "alignSelf": "flex-end",
                "backgroundColor": "#F5BF00",
                "borderBottomLeftRadius": 5,
                "borderRightColor": "#000",
                "borderRightWidth": 1,
                "borderTopLeftRadius": 5,
                "height": 14,
                "paddingHorizontal": 20,
                "width": "50%",
              },
              Object {
                "width": "50%",
              },
            ]
          }
        />
      </View>
      <View
        style={
          Object {
            "width": "50%",
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "alignSelf": "flex-start",
                "backgroundColor": "#F7A65B",
                "borderBottomRightRadius": 5,
                "borderLeftColor": "#000",
                "borderLeftWidth": 1,
                "borderTopRightRadius": 5,
                "height": 14,
                "paddingHorizontal": 20,
                "width": "50%",
              },
              Object {
                "width": "50%",
              },
            ]
          }
        />
      </View>
    </View>
  </View>
</RNCSafeAreaView>
`;

exports[`When invoked a Dashboard component, stats.length = undefined Should render Stats component 1`] = `
<RNCSafeAreaView>
  <Text
    style={
      Object {
        "fontSize": 26,
        "marginTop": -25,
        "paddingLeft": 20,
      }
    }
  >
    Match Details
  </Text>
  <View
    style={
      Object {
        "backgroundColor": "#E5E5E5",
        "borderRadius": 10,
        "margin": 15,
        "marginBottom": 5,
        "padding": 10,
      }
    }
  >
    <View
      style={
        Object {
          "borderBottomColor": "#7A7A7A",
          "borderBottomWidth": 1,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingVertical": 8,
        }
      }
    >
      <Text>
        Anna
      </Text>
      <Text
        style={
          Object {
            "fontSize": 20,
            "letterSpacing": 20,
          }
        }
      >
        2
        3
        4
      </Text>
    </View>
    <View
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingVertical": 8,
        }
      }
    >
      <Text>
        Anna
      </Text>
      <Text
        style={
          Object {
            "fontSize": 20,
            "letterSpacing": 20,
          }
        }
      >
        2
        3
        4
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "borderBottomColor": "#C4C4C4",
        "borderBottomWidth": 1,
        "flexDirection": "row",
        "fontSize": 24,
        "justifyContent": "space-between",
        "marginBottom": 5,
        "marginHorizontal": 10,
        "marginTop": 10,
      }
    }
  >
    <Text
      style={
        Object {
          "borderBottomColor": "#C4C4C4",
          "borderBottomWidth": 1,
          "flexDirection": "row",
          "fontSize": 24,
          "justifyContent": "space-between",
          "marginBottom": 5,
          "marginHorizontal": 10,
          "marginTop": 10,
        }
      }
    >
      Anna
    </Text>
    <Text
      style={
        Object {
          "borderBottomColor": "#C4C4C4",
          "borderBottomWidth": 1,
          "flexDirection": "row",
          "fontSize": 24,
          "justifyContent": "space-between",
          "marginBottom": 5,
          "marginHorizontal": 10,
          "marginTop": 10,
        }
      }
    >
      Anna
    </Text>
  </View>
  <Image
    source={
      Object {
        "uri": "https://www.gatoslechuzos.com/static/loading.gif",
      }
    }
    style={
      Object {
        "height": 200,
        "left": "40%",
        "top": "45%",
        "width": 200,
      }
    }
  />
</RNCSafeAreaView>
`;
